@@ -12,4 +12,13 @@
 	<mount id="10" clientid="377" name="Rapid Boar" speed="20" />
 	<mount id="11" clientid="378" name="Stampor" speed="20" />
 	<mount id="12" clientid="379" name="Undead Cavebear" speed="20" />
+	<mount id="13" clientid="387" name="Mule" speed="20" />
+	<mount id="14" clientid="388" name="Tiger Slug" speed="20" />
+	<mount id="15" clientid="389" name="Uniwheel" speed="20" />
+	<mount id="16" clientid="390" name="Crystal Wolf" speed="20" />
+	<mount id="17" clientid="392" name="War Horse" speed="20" />
+	<mount id="18" clientid="401" name="Kingly Deer" speed="20" />
+	<mount id="19" clientid="402" name="Tamed Panda" speed="20" />
+	<mount id="20" clientid="405" name="Dromedary" speed="20" />
+	<mount id="21" clientid="406" name="Sandstone Scorpion" speed="20" />
 </mounts>
