@@ -204,6 +204,9 @@ CONST_ME_YALAHARIGHOST = 65
 CONST_ME_BATS = 66
 CONST_ME_SMOKE = 67
 CONST_ME_INSECTS = 68
+CONST_ME_DRAGONHEAD = 69
+CONST_ME_ORCSHAMAN = 70
+CONST_ME_ORCSHAMAN_FIRE = 71
 CONST_ME_NONE = 255
 
 CONST_ANI_SPEAR = 0
